# Arpg

./: .gitignore  CMakeLists.txt  README.md  build.py
.github/workflows/: test_build.yml  test_build_editor.yml
engine_bin/: main.cpp
engine_core/: engine.h  game.h  global.h  player.h  spritesheet.h  stage.h  tilemap.h
engine_editor/: editorwidget.py  imageviewer.py  main.py  project.py  projecteditor.py  requirements.txt  spritesheeteditor.py
